Added fix for gmail web client.

--- a/index.html
+++ b/index.html
@@ -273,11 +273,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Suite 330</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
-                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(310) 751 4158</a>
+                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Suite 330</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(310) 751 4158</a>
                             </p>
                         </td>
                     </tr>
@@ -285,11 +285,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;"">New York</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">25 Broadway</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">5th Floor</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">New York, NY 10004</a> <br>
-                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(646) 602 9727</a>
+                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;"">New York</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">25 Broadway</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">5th Floor</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">New York, NY 10004</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(646) 602 9727</a>
                             </p>
                         </td>
                     </tr>
@@ -297,11 +297,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">18-26 Essex Road,</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">London N1 8LN</a> <br>
-                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
+                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">18-26 Essex Road,</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">London N1 8LN</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
                             </p>
                         </td>
                     </tr>
@@ -309,12 +309,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Edificio Corporativo</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
-                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +(809) 562 6921</a>
+                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Edificio Corporativo</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(809) 562 6921</a>
                             </p>
                         </td>
                     </tr>
@@ -322,12 +322,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Pyrmont,</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
-                                <a href="" style="text-decoration: none; color: #FFFFFF;">Australia</a> <br>
-                                <a href="" style="text-decoration: none; color: #6EE5B9;">Tel: +61 433 782 076</a>
+                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Pyrmont,</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Australia</a> <br>
+                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +61 433 782 076</a>
                             </p>
                         </td>
                     </tr>
