Changed image urls to relative.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <tr>
                         <td align="center" valign="top">
                             <img alt="logo" class="mobile-center"
-                                src="http://www.rmu.gallery/js-internal-email/logo.jpg">
+                                src="images/logo.jpg">
                         </td>
                     </tr>
                 </table>
@@ -93,7 +93,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="youtube" src="http://www.rmu.gallery/js-internal-email/youtube2.jpg">
+                            <img width="100%" alt="youtube" src="images/youtube.jpg">
                         </td>
                     </tr>
 
@@ -147,7 +147,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="kim" src="http://www.rmu.gallery/js-internal-email/kim.jpg">
+                            <img width="100%" alt="kim" src="images/kim.jpg">
                         </td>
                     </tr>
 
@@ -197,7 +197,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="sara" src="http://www.rmu.gallery/js-internal-email/sara.jpg">
+                            <img width="100%" alt="sara" src="images/sara.jpg">
                         </td>
                     </tr>
 
@@ -227,7 +227,7 @@
 
                     <tr>
                         <td align="center" valign="top">
-                            <img width="100%" alt="laptop" src="http://www.rmu.gallery/js-internal-email/laptop.jpg">
+                            <img width="100%" alt="laptop" src="images/laptop.jpg">
                         </td>
                     </tr>
                 </table>
@@ -266,7 +266,7 @@
 
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f;">
-                            <img alt="logo" src="http://www.rmu.gallery/js-internal-email/logo-white3.png">
+                            <img alt="logo" src="images/logo-white.png">
                         </td>
                     </tr>
 
@@ -357,11 +357,11 @@
                     <tr>
                         <td align="center">
                             <a href="#"> <img width="30" style="padding: 0 5px;"
-                                    src="http://www.rmu.gallery/js-internal-email/facebook.png" alt="facebook"></a>
+                                    src="images/facebook.png" alt="facebook"></a>
                             <a href="#"><img width="30" style="padding: 0 5px;"
-                                    src="http://www.rmu.gallery/js-internal-email/twitter.png" alt="twitter"></a>
+                                    src="images/twitter.png" alt="twitter"></a>
                             <a href="#"><img width="30" style="padding: 0 5px;"
-                                    src="http://www.rmu.gallery/js-internal-email/linkedin.png" alt="linkedin"></a>
+                                    src="images/linkedin.png" alt="linkedin"></a>
                         </td>
                     </tr>
 
