Added social media links.

--- a/index.html
+++ b/index.html
@@ -356,12 +356,9 @@
 
                     <tr>
                         <td align="center">
-                            <a href="#"> <img width="30" style="padding: 0 5px;"
-                                    src="images/facebook.png" alt="facebook"></a>
-                            <a href="#"><img width="30" style="padding: 0 5px;"
-                                    src="images/twitter.png" alt="twitter"></a>
-                            <a href="#"><img width="30" style="padding: 0 5px;"
-                                    src="images/linkedin.png" alt="linkedin"></a>
+                            <a href="https://www.facebook.com/joystickinteractive"> <img width="30" style="padding: 0 5px;" src="images/facebook.png" alt="facebook"></a>
+                            <a href="https://twitter.com/wearejoystick"><img width="30" style="padding: 0 5px;" src="images/twitter.png" alt="twitter"></a>
+                            <a href="https://www.linkedin.com/company/joystick-interactive/"><img width="30" style="padding: 0 5px;" src="images/linkedin.png" alt="linkedin"></a>
                         </td>
                     </tr>
 
