Changed address markup to span tags.

--- a/index.html
+++ b/index.html
@@ -11,38 +11,34 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Playfair+Display:200i|Raleway:700|Roboto&display=swap');
-
         /* Some resets and issue fixes */
         #outlook a {
             padding: 0;
         }
-
         body {
             width: 100% !important;
             padding: 0;
             margin: 0;
             -ms-text-size-adjust: 100%;
-            text-size-adjust: 100%;
+                text-size-adjust: 100%;
             background-color: #EFEDF2;
         }
-
         table td {
             border-collapse: collapse;
             /* outline: 1px dashed red !important; */
         }
-
         @media screen and (max-width: 630px) {
             br {
                 /* display: none !important; */
             }
         }
-
         @media screen and (min-width: 630px) {
             .fixed-width {
                 width: 800px !important;
                 height: auto !important;
             }
         }
+
     </style>
 
 
@@ -273,11 +269,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Suite 330</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(310) 751 4158</a>
+                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">4551 Glencoe Avenue</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Suite 330</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Marina del Rey, CA 90292</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(310) 751 4158</span>
                             </p>
                         </td>
                     </tr>
@@ -285,11 +281,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;"">New York</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">25 Broadway</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">5th Floor</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">New York, NY 10004</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(646) 602 9727</a>
+                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">New York</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">25 Broadway</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">5th Floor</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">New York, NY 10004</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(646) 602 9727</span>
                             </p>
                         </td>
                     </tr>
@@ -297,11 +293,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">18-26 Essex Road,</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">London N1 8LN</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
+                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Suncourt House, Level 3,</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">18-26 Essex Road,</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">London N1 8LN</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</span>
                             </p>
                         </td>
                     </tr>
@@ -309,12 +305,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Edificio Corporativo</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +(809) 562 6921</a>
+                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Edificio Corporativo</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</span><br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Abraham Lincoln, Suite 303</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Santo Domingo, Dominican Republic</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(809) 562 6921</span>
                             </p>
                         </td>
                     </tr>
@@ -322,12 +318,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <a href="" style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Pyrmont,</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #FFFFFF;">Australia</a> <br>
-                                <a href="" style="cursor: default; text-decoration: none; color: #6EE5B9;">Tel: +61 433 782 076</a>
+                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Level 4, 100 Harris St,</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Pyrmont,</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Sydney NSW 2009,</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Australia</span> <br>
+                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +61 433 782 076</span>
                             </p>
                         </td>
                     </tr>
@@ -356,9 +352,9 @@
 
                     <tr>
                         <td align="center">
-                            <a href="https://www.facebook.com/joystickinteractive"> <img width="30" style="padding: 0 5px;" src="images/facebook.png" alt="facebook"></a>
-                            <a href="https://twitter.com/wearejoystick"><img width="30" style="padding: 0 5px;" src="images/twitter.png" alt="twitter"></a>
-                            <a href="https://www.linkedin.com/company/joystick-interactive/"><img width="30" style="padding: 0 5px;" src="images/linkedin.png" alt="linkedin"></a>
+                            <a href="https://www.facebook.com/joystickinteractive" target="_blank"><img width="30" style="padding: 0 5px;" src="images/facebook.png" alt="facebook"></a>
+                            <a href="https://twitter.com/wearejoystick" target="_blank"><img width="30" style="padding: 0 5px;" src="images/twitter.png" alt="twitter"></a>
+                            <a href="https://www.linkedin.com/company/joystick-interactive/" target="_blank"><img width="30" style="padding: 0 5px;" src="images/linkedin.png" alt="linkedin"></a>
                         </td>
                     </tr>
 
