Added google maps link on addresses on footer.

--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">4551 Glencoe Avenue</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Suite 330</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Marina del Rey, CA 90292</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(310) 751 4158</span>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Los Angeles</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Suite 330</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(310) 751 4158</a>
                             </p>
                         </td>
                     </tr>
@@ -281,11 +281,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">New York</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">25 Broadway</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">5th Floor</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">New York, NY 10004</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(646) 602 9727</span>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">New York</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">25 Broadway</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">5th Floor</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">New York, NY 10004</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(646) 602 9727</a>
                             </p>
                         </td>
                     </tr>
@@ -293,11 +293,11 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Suncourt House, Level 3,</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">18-26 Essex Road,</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">London N1 8LN</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</span>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">London</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">18-26 Essex Road,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">London N1 8LN</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
                             </p>
                         </td>
                     </tr>
@@ -305,12 +305,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Edificio Corporativo</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</span><br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Abraham Lincoln, Suite 303</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Santo Domingo, Dominican Republic</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(809) 562 6921</span>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Santo Domingo</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Edificio Corporativo</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +(809) 562 6921</a>
                             </p>
                         </td>
                     </tr>
@@ -318,12 +318,12 @@
                     <tr>
                         <td align="center" valign="top" style="background-color: #1c022f; padding-top: 20px;">
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1.5; color: #FFFFFF; margin: 0;">
-                                <span style="cursor: default; text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Level 4, 100 Harris St,</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Pyrmont,</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Sydney NSW 2009,</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #FFFFFF;">Australia</span> <br>
-                                <span style="cursor: default; text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +61 433 782 076</span>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1.5em; color: #FFFFFF;">Sydney</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Pyrmont,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #FFFFFF;">Australia</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 1em; color: #6EE5B9;">Tel: +61 433 782 076</a>
                             </p>
                         </td>
                     </tr>
